--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+**/.env*
+
 
 # Testing
 coverage
@@ -36,3 +38,6 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+# VS Code
+.vscode/
