feat(database): Set up Prisma with Docker for local development

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "pnpm --filter @repo/database db:generate"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
