--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "i18n:validate": "node scripts/validate-translations.js"
   },
   "dependencies": {
+    "@repo/database": "workspace:^",
     "@repo/ui": "workspace:*",
     "i18next": "^25.4.2",
     "i18next-browser-languagedetector": "^8.2.0",
