--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-**/.env*
+**/.env
 
 # Prisma
 /packages/database/prisma/generated
