--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@repo/database": "workspace:^",
+    "next-auth": "^4.24.11",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
