--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "^15.5.0",
+    "next-auth": "^4.24.11",
     "next-i18next": "^15.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
