--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,41 @@ services:
 
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  
+  postgres-keycloak:
+    image: postgres:15-alpine
+    container_name: olinnwan-postgres-keycloak
+    restart: always
+    environment:
+      POSTGRES_USER: app_user
+      POSTGRES_PASSWORD: app_password
+      POSTGRES_DB: keycloak_db
+    volumes:
+      - postgres-keycloak-data:/var/lib/postgresql/data
+
+    ports:
+      - '25432:5432'
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.3.3
+    container_name: olinnwan-keycloak
+    restart: always
+    depends_on:
+      - postgres-keycloak
+
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: password
+      KC_DB: postgres
+      KC_DB_USERNAME: app_user
+      KC_DB_PASSWORD: app_password
+      KC_DB_URL: jdbc:postgresql://postgres-keycloak:5432/keycloak_db
+
+    ports:
+      - '8080:8080'
+
+    command: ["start-dev"]
 
 volumes:
   postgres-data:
+  postgres-keycloak-data:
